tests/snapshots/e2e_tests__convert_comprehensive_features_page_to_markdown.snap
---
source: tests/e2e_tests.rs
assertion_line: 511
expression: markdown
---
# Comprehensive Test Page

## Basic Formatting

This page contains **bold**, _italic_, and _underlined_ text.

It also has `inline code` and [external links](https://example.com).

## Lists

- Unordered item 1
- Unordered item 2
  - Nested item

1. Ordered item 1
2. Ordered item 2

## Emoticons and Icons

✅ Success indicator

❌ Failure indicator

## Internal Links

See [[Getting Started Guide]] for more information.

## User Mentions

Assigned to @user:6320c26429083bbe8cc369b0 for review.

## Task Lists

- [x] Complete this task
- [ ] Pending task

## Tables

| Header 1 | Header 2 |
| -------- | -------- |
| Cell 1   | Cell 2   |

## Code Blocks

```javascript
function greet(name) { console.log(name); }
```

## Images

![image]()

## Placeholders

## Time Elements

Meeting date:
