tests/snapshots/e2e_tests__convert_meeting_notes_with_tasks_to_markdown.snap
---
source: tests/e2e_tests.rs
assertion_line: 632
expression: markdown
---
## 🗓 Date

2025-10-07

## 👥 Participants

- @user:example-account-id

## 🥅 Goals

## 🗣 Discussion topics

| Time  | Topic          |
| ----- | -------------- |
| 10:00 | Project update |

## ✅ Action items

- [ ] Review architecture proposal
- [x] Update documentation
