tests/snapshots/e2e_tests__convert_page_with_column_layout_to_markdown.snap
---
source: tests/e2e_tests.rs
expression: markdown
---
# Team Responsibilities

|   |   |
| --- | --- |
| **Frontend**: Owns the web experience. | **Backend**: Maintains APIs and services. |
| **DevOps**: Ensures reliable deployments. | **QA**: Guards product quality. |
