tests/snapshots/e2e_tests__convert_page_with_internal_links_to_markdown.snap
---
source: tests/e2e_tests.rs
expression: markdown
---
# Installation

See the [[Getting Started Guide]] for prerequisites.

For API details, check [[API Documentation]].

## Steps

1. Download the installer
2. Run the setup wizard
3. Configure your settings
