tests/snapshots/e2e_tests__markdown_conversion_preserves_structure.snap
---
source: tests/e2e_tests.rs
expression: markdown
---
# Comprehensive Test Page

## Basic Formatting

This page contains **bold**, _italic_, and _underlined_ text.

It also has `inline code` and [external links](https://example.com).

## Lists

- Unordered item 1
- Unordered item 2Nested item

1. Ordered item 1
2. Ordered item 2

## Emoticons and Icons

✅ Success indicator

❌ Failure indicator

## Internal Links

See  for more information.

## User Mentions

Assigned to  for review.

## Task Lists

- [x] Complete this task
- [ ] Pending task

## Tables

| Header 1 | Header 2 |
| -------- | -------- |
| Cell 1   | Cell 2   |

## Code Blocks

javascriptfunction greet(name) { console.log(name); }
## Images

![image]()

## Placeholders

This is a placeholder for future content

## Time Elements

Meeting date:
